# cuda_stencils

./: CMakeLists.txt  LICENSE.md  Makefile  defs.h  main.cu  stencil_kernels.h  tools.h
libjson/: CMakeLists.txt
results/P100/: .benchmarks.py.swp  benchmarks.py  perf_results.json
results/P100/block_32x8/: perf_results_k10.json  perf_results_k20.json  perf_results_k60.json
results/P100/block_64x8/: perf_results_k10.json  perf_results_k60.json
unstructured/: CMakeLists.txt  converter.hpp  hilbert.hpp  main.cu  mesh.hpp  neighbours_table.hpp  stencil_kernels.h  test.cpp  udefs.hpp  umesh.hpp
